# PyAliceVision

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
docs/source/: api.rst  conf.py  index.rst
src/: CMakeLists.txt  camera.cpp  feature.cpp  feature_engine.cpp  geometry.cpp  image.cpp  matching.cpp  pyalicevision.cpp  pyalicevision.hpp  sfmdata.cpp  system.cpp
tests/: test_camera.py  test_geometry.py  test_image.py  test_sfmdata.py
tests/data/: README.md
